Added a second hologram option to display a team balance leaderboard
Added a config option for a teleport delay on /team home
There is now a config option to only allow a team to have a single owner, this comes with the addition of a new command (/team setowner) which will only be available if only a single owner is allowed
Added admin commands:
* /teama name <team> <name> - Set the name of the specified team
* /teama description <team> <description> - the the description of the specified team 
* /teama open <team> - toggle if a team is open or invite only
* /teama invite <team> <player> - Invite a player to that team 
* /teama create <team> - Create a new team without an owner
* /teama promote <player> - Promote a player within their team 
* /teama demote <player> - Demote a player within their team
* /teama setowner <player> - Set the owner of the team (only avaliable if "singleOwner" is enabled in the config)
* /teama join <team> <player> - Force a player to join that team
* /teama leave <player> - Force a player to leave their team


Improvements:
Commands and cooldowns only activate if the command is successful
Added placeholder %betterteams_color% to use the team color
Improved help message if a command is invalid
Team color displays when the team name is being displayed below the players name
Command cost is now by default taken from the team balance (this can be changed in team.yml) 

Bug Fixes: 
Fixed a problem when placeholder API is not present on the server.
Fixed a problem where a players team name was not removed when they left the team


3.1.1: 
Features: 


Improvements:


Bug Fixes: 
Fixed 2 bugs with updating messages.yml to the most recent version



TODO (any TODO which is not specifically code), mainly used for reminders to update documentation
update messages.yml version


Headings: 
Features: 


Improvements:


Bug Fixes: 
